apps/homepage/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: apps
      namespace: gateways
      sectionName: https
  hostnames:
    - homepage.home.dokocloud.net
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
